extended themes to webcam options

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -9669,9 +9669,9 @@ Size = 30
 
 [OptionsNetworkButtonInsert]
 X = 670
-Y = 430
+Y = 435
 W = 35
-H = 52
+H = 50
 Tex = Optionsbuttoninsert
 Color = ColorDark
 DColor = blue
@@ -9680,7 +9680,7 @@ Texts = 1
 
 [OptionsNetworkButtonInsertText1]
 X = 18
-Y = 65
+Y = 63
 Align = 1
 Color = White
 Size = 13
@@ -9688,9 +9688,9 @@ Text = C_INSERT_USER
 
 [OptionsNetworkButtonDelete]
 X = 590
-Y = 430
+Y = 435
 W = 35
-H = 52
+H = 50
 Tex = Optionsbuttondelete
 Color = ColorDark
 DColor = red
@@ -9699,16 +9699,11 @@ Texts = 1
 
 [OptionsNetworkButtonDeleteText1]
 X = 18
-Y = 65
+Y = 63
 Align = 1
 Color = White
 Size = 13
 Text = C_DELETE_USER
-
-#[OptionsNetworkSelectSlide]
-#Inheritance = OptionsSelectSlide
-#Y = 130
-
 
 [OptionsNetworkSelectWebsite]
 Inheritance = OptionsSelectSlide
@@ -9789,86 +9784,105 @@ Texts = 5
 Tex = OptionsBG
 
 [OptionsWebcamStatic1]
-X = 30
-Y = 30
-W = 75
-H = 70
-Color = White
-Tex = Optionsbuttonwebcam
-Type = Transparent
+Inheritance = OptionsHelperBG
 
-[OptionsWebcamStatic2]
-X = 70
-Y = 450
-W = 250
-H = 35
-Tex = MainBar
-Color =
-DColor =
-Type = Transparent
 [OptionsWebcamText1]
-X = 115
-Y = 40
-Color = White
-Size = 45
+Inheritance = OptionsTitleText
 Text = C_WEBCAM
 
 [OptionsWebcamText2]
-X = 90
-Y = 450
+X = 70
+Y = 457
 Color = White
-Size = 28
+Size = 14
+
 Text = SING_OPTIONS_WEBCAM_PREVIEW
 
-[OptionsWebcamSelectSlide]
-Inheritance = OptionsSelectSlide
-H = 35
-
 [OptionsWebcamSelectWebcam]
-Inheritance = OptionsWebcamSelectSlide
+Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_WEBCAM_ID
 Y = 130
 
+[OptionsWebcamIDDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_WEBCAM_ID_DESC
+Y = 137
+
 [OptionsWebcamSelectResolution]
-Inheritance = OptionsWebcamSelectSlide
+Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_WEBCAM_RESOLUTION
 Y = 170
 
+[OptionsWebcamResolutionDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_WEBCAM_RESOLUTION_DESC
+Y = 177
+
 [OptionsWebcamSelectFPS]
-Inheritance = OptionsWebcamSelectSlide
+Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_WEBCAM_FPS
 Y = 210
 
+[OptionsWebcamFPSDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_WEBCAM_FPS_DESC
+Y = 217
+
 [OptionsWebcamSelectFlip]
-Inheritance = OptionsWebcamSelectSlide
+Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_WEBCAM_FLIP
 Y = 250
 
+[OptionsWebcamFlipDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_WEBCAM_FLIP_DESC
+Y = 257
+
 [OptionsWebcamSelectBrightness]
-Inheritance = OptionsWebcamSelectSlide
+Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_WEBCAM_BRIGHTNESS
 Y = 290
 
+[OptionsWebcamBrightnessDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_WEBCAM_BRIGHTNESS_DESC
+Y = 297
+
 [OptionsWebcamSelectSaturation]
-Inheritance = OptionsWebcamSelectSlide
+Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_WEBCAM_SATURATION
 Y = 330
 
+[OptionsWebcamSaturationDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_WEBCAM_SATURATION_DESC
+Y = 337
+
 [OptionsWebcamSelectHue]
-Inheritance = OptionsWebcamSelectSlide
+Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_WEBCAM_HUE
 Y = 370
 
+[OptionsWebcamHueDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_WEBCAM_HUE_DESC
+Y = 377
+
 [OptionsWebcamSelectEffect]
-Inheritance = OptionsWebcamSelectSlide
+Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_WEBCAM_EFFECT
 Y = 410
 
+[OptionsWebcamEffectDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_WEBCAM_EFFECT_DESC
+Y = 417
+
 [OptionsWebcamButtonPreVisualization]
-X = 330
+X = 210
 Y = 450
-W = 400
-H = 35
+W = 170
+H = 25
 Tex = MainBar
 Color = ColorDark
 DColor = Gray
@@ -9876,20 +9890,15 @@ Type = Transparent
 Texts = 1
 
 [OptionsWebcamButtonPreVisualizationText1]
-X = 200
+X = 85
 Y = 5
 Align = 1
 Color = White
-Size = 30
+Size = 14
 Text = SING_OPTIONS_WEBCAM_ENABLE_PREVIEW
 
 [OptionsWebcamButtonExit]
 Inheritance = OptionsButtonExit2
-Y = 500
-
-[OptionsWebcamButtonExitText1]
-Inheritance = OptionsButtonExit2Text
-
 
 [OptionsProfiles]
 Texts = 2
