Fixed overlapping items in lyrics options

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -9297,7 +9297,7 @@ Tex = OptionsBG
 [OptionsLyricsStatic1]
 Inheritance = OptionsHelperBG
 
-[OptionsLyricsText1]
+[OptionsLyricsTitle]
 Inheritance = OptionsTitleText
 Text = C_LYRICS
 
@@ -9316,8 +9316,6 @@ Y = 500
 Inheritance = OptionsSelectSlide
 Text = PARTY_SELECT_MODE
 Y = 130
-ShowArrows = 0
-OneItemOnly = 0
 
 [OptionsLyricsModeDesc]
 Inheritance = OptionsDescText
@@ -9333,12 +9331,10 @@ Inheritance = OptionsDescText
 Text = SING_OPTIONS_LYRICS_STAVES_DESC
 Y = 177
 
-; -- TODO: Enable position desc -- 
-
-;[OptionsLyricsPositionDesc]
-;Inheritance = OptionsDescText
-;Text = SING_OPTIONS_LYRICS_POSITION_DESC
-;Y = 177
+[OptionsLyricsPositionDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_LYRICS_POSITION_DESC
+Y = 177
 
 [OptionsLyricsSelectFont]
 Inheritance = OptionsSelectSlide
@@ -9374,8 +9370,6 @@ Y = 297
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_LYRICS_LINE
 Y = 330
-ShowArrows = 0
-OneItemOnly = 0
 
 [OptionsLyricsLineDesc]
 Inheritance = OptionsDescText
@@ -9386,8 +9380,6 @@ Y = 337
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_LYRICS_PROPERTY
 Y = 370
-ShowArrows = 0
-OneItemOnly = 0
 
 [OptionsLyricsPropertyDesc]
 Inheritance = OptionsDescText
