--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -66,7 +66,7 @@ Color = White
 Font = 0
 Size = 15
 Align = 0
-Text = UltraStar WorldParty 21.7
+Text = UltraStar WorldParty 21.9
 
 [MainText2]
 X = 5
@@ -8975,8 +8975,8 @@ Text = C_BACK
 [OptionsButtonExit2]
 X = 740
 Y = 95
-W = 20
-H = 15
+W = 18
+H = 13
 Tex = ButtonClose
 Color = ColorDark
 DColor = White
@@ -8986,10 +8986,8 @@ Texts = 1
 
 
 [OptionsSelectSlide]
-#TODO: Remove Tex, type Color, Dcolor
 Tex = 
 Type = Transparent
-
 TexSBG = SelectBG
 TypeSBG = Transparent
 X = 50
@@ -8998,7 +8996,7 @@ H = 25
 TextSize = 14
 SBGW = 170
 SkipX = 10
-TColor = White
+TColor = ColorDark
 TDColor = White
 SBGColor = ColorDark
 SBGDColor = Gray
@@ -9006,6 +9004,7 @@ STColor = White
 STDColor = GrayDark
 ShowArrows = 1
 OneItemOnly = 1
+
 
 [OptionsTitleText]
 X = 30
@@ -9019,14 +9018,15 @@ Y = 136
 Size = 12
 Color = GrayLight
 
-[OptionsHelperBG]
+[OptionsMenuBG]
 X = 30
 Y = 85
 W = 740
-H = 460
-alpha = 0.45
+H = 475
+alpha = alpha
 Color = White
-Tex = BlackBG
+DColor = White
+Tex = OptMenuBG
 Type = Transparent
 
 [OptionsGame]
@@ -9036,7 +9036,7 @@ Texts = 5
 Tex = OptionsBG
 
 [OptionsGameStatic1]
-Inheritance = OptionsHelperBG
+Inheritance = OptionsMenuBG
 
 [OptionsGameText1]
 Inheritance = OptionsTitleText
@@ -9133,7 +9133,7 @@ Texts = 4
 Tex = OptionsBG
 
 [OptionsGraphicsStatic1]
-Inheritance = OptionsHelperBG
+Inheritance = OptionsMenuBG
 
 [OptionsGraphicsText1]
 Inheritance = OptionsTitleText
@@ -9209,7 +9209,7 @@ Texts = 5
 Tex = OptionsBG
 
 [OptionsSoundStatic1]
-Inheritance = OptionsHelperBG
+Inheritance = OptionsMenuBG
 
 [OptionsSoundText1]
 Inheritance = OptionsTitleText
@@ -9295,7 +9295,7 @@ Texts = 1
 Tex = OptionsBG
 
 [OptionsLyricsStatic1]
-Inheritance = OptionsHelperBG
+Inheritance = OptionsMenuBG
 
 [OptionsLyricsTitle]
 Inheritance = OptionsTitleText
@@ -9459,7 +9459,7 @@ Texts = 5
 Tex = OptionsBG
 
 [OptionsThemesStatic1]
-Inheritance = OptionsHelperBG
+Inheritance = OptionsMenuBG
 
 [OptionsThemesText1]
 Inheritance = OptionsTitleText
@@ -9504,7 +9504,7 @@ Texts = 5
 Tex = OptionsBG
 
 [OptionsMicrophonesStatic1]
-Inheritance = OptionsHelperBG
+Inheritance = OptionsMenuBG
 
 [OptionsMicrophonesText1]
 Inheritance = OptionsTitleText
@@ -9569,7 +9569,7 @@ Texts = 5
 Tex = OptionsBG
 
 [OptionsAdvancedStatic1]
-Inheritance = OptionsHelperBG
+Inheritance = OptionsMenuBG
 
 [OptionsAdvancedText1]
 Inheritance = OptionsTitleText
@@ -9644,7 +9644,7 @@ Texts = 5
 Tex = OptionsBG
 
 [OptionsNetworkStatic1]
-Inheritance = OptionsHelperBG
+Inheritance = OptionsMenuBG
 
 [OptionsNetworkText1]
 Inheritance = OptionsTitleText
@@ -9776,7 +9776,7 @@ Texts = 5
 Tex = OptionsBG
 
 [OptionsWebcamStatic1]
-Inheritance = OptionsHelperBG
+Inheritance = OptionsMenuBG
 
 [OptionsWebcamText1]
 Inheritance = OptionsTitleText
@@ -9875,7 +9875,7 @@ X = 210
 Y = 450
 W = 170
 H = 25
-Tex = MainBar
+Tex = SelectBG
 Color = ColorDark
 DColor = Gray
 Type = Transparent
