--- a/game/themes/common/Basic Violet.ini
+++ b/game/themes/common/Basic Violet.ini
@@ -51,10 +51,9 @@ Button2        = [main]button2.png
 Button         = [main]button.png
 ButtonF        = [main]buttonf.jpg
 MainBar        = [main]mainBar.png
-SelectBG       = [main]selectbg.png
 
-Select_ArrowLeft = [interface]select_arrow_left.png
-Select_ArrowRight = [interface]select_arrow_right.png
+Select_ArrowLeft = [interface]select_arrow_left.svg
+Select_ArrowRight = [interface]select_arrow_right.svg
 
 #Backgrounds
 LoadingBG      = [bg-load]basic.jpg
@@ -163,6 +162,8 @@ Optionsbuttonnetwork     = [Options]buttonnetwork.png
 Optionsbuttonwebcam      = [Options]buttonwebcam.png
 Optionsbuttonprofiles    = [Options]buttonprofiles.png
 Optionsbuttonback        = [Options]buttonback.png
+
+SelectBG                 = [Options]SelectBG.svg
 
 Optionsbuttoninsert      = [Options]buttoninsert.png
 Optionsbuttondelete      = [Options]buttondelete.png
@@ -300,4 +301,4 @@ AboutBG = [About]helperbg2.png
 Dhelperbg = [Developers]helperbg.png
 
 # # # C O M M O N # # #
-BlackBG = [common]blackbg.png
+OptMenuBG = [options]menubg.svg
