updated profile screen

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -66,7 +66,7 @@ Color = White
 Font = 0
 Size = 15
 Align = 0
-Text = UltraStar WorldParty 21.9
+Text = UltraStar WorldParty 22.1
 
 [MainText2]
 X = 5
@@ -210,47 +210,28 @@ Size = 18
 Align = 1
 Z = 1
 
+#####################################
+## Need to be moved to Profile Screen
+#####################################
 [Name]
 Texts = 2
 
 [NameBackground]
 Tex  = MainBG
 
-#write your name
 [NameStatic1]
-X = 50
-Y = 410
-W = 200
-H = 35
-Tex = MainBar
-Color =
-Type = Transparent
-
-#choose avatar
-#[NameStatic2]
-#X = 30
-#Y = 535
-#W = 200
-#H = 35
-#Tex = MainBar
-#Color =
-#Type = Transparent
+Inheritance = OptionsMenuBG
 
 [NameText1]
-X = 30
-Y = 5
-Color = White
-Font = 0
-Size = 45
-Align = 0
-Text = SING_PLAYER_TITLE
+Inheritance = OptionsTitleText
+Text = C_PROFILES
 
 [NameText2]
-X = 400
+X = 350
 Y = 60
 Color = White
 Font = 0
-Size = 32
+Size = 22
 Align = 1
 ;Text = SING_PLAYER_READY
 
@@ -290,6 +271,7 @@ TextSize = 22
 SBGDColor = ColorDark
 SBGColor = ColorLight
 
+
 [NamePlayerSelectStatic1]
 X = 120
 Y = 205
@@ -298,7 +280,7 @@ H = 88
 Tex = AvatarFrame2
 Color = P1Dark
 Type = Colorized
-Z = 1
+
 
 [NamePlayerSelectStatic2]
 Inheritance = NamePlayerSelectStatic1
@@ -332,7 +314,6 @@ Font = 1
 Size = 16
 Align = 1
 Color = White
-Z = 1
 
 [NamePlayerSelectStatic2Text]
 Inheritance = NamePlayerSelectStatic1Text
@@ -359,7 +340,6 @@ X = 127
 Y = 213
 W = 51
 H = 72
-Z = 1
 Tex = NoAvatar_P1
 Type = Transparent
 
@@ -392,7 +372,6 @@ Tex = NoAvatar_P6
 X = -10
 W = 85
 H = 122
-Z = 0.95
 Tex = SelectFrame
 Color = ColorLight
 DColor = ColorLightest
@@ -426,7 +405,6 @@ X = 260
 Y = 410
 W = 150
 H = 35
-Z = 1
 Tex = Button
 Color = ColorLight
 DColor = ColorDark
@@ -484,15 +462,7 @@ Text = C_NEXT
 
 [NamePlayerExitButton]
 Inheritance = OptionsButtonExit2
-X = 50
-Y = 545
-W = 200
-H = 35
 
-[NamePlayerExitButtonText1]
-Inheritance = OptionsButtonExit2Text
-Size = 22
-X = 40
 
 #########################################
 #####  S O N G   S E L E C T I O N  #####
