New options backgrounds

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -66,7 +66,7 @@ Color = White
 Font = 0
 Size = 15
 Align = 0
-Text = UltraStar WorldParty 22.1
+Text = UltraStar WorldParty 22.3
 
 [MainText2]
 X = 5
@@ -217,7 +217,7 @@ Z = 1
 Texts = 2
 
 [NameBackground]
-Tex  = MainBG
+Tex  = OptionsProfilesBG
 
 [NameStatic1]
 Inheritance = OptionsMenuBG
@@ -8966,7 +8966,7 @@ H = 25
 TextSize = 14
 SBGW = 170
 SkipX = 10
-TColor = ColorDark
+TColor = Black
 TDColor = White
 SBGColor = ColorDark
 SBGDColor = Gray
@@ -9003,7 +9003,7 @@ Type = Transparent
 Texts = 5
 
 [OptionsGameBackground]
-Tex = OptionsBG
+Tex = OptionsGameBG
 
 [OptionsGameStatic1]
 Inheritance = OptionsMenuBG
@@ -9100,7 +9100,7 @@ Inheritance = OptionsButtonExit2
 Texts = 4
 
 [OptionsGraphicsBackground]
-Tex = OptionsBG
+Tex = OptionsGraphicsBG
 
 [OptionsGraphicsStatic1]
 Inheritance = OptionsMenuBG
@@ -9176,7 +9176,7 @@ Inheritance = OptionsButtonExit2
 Texts = 5
 
 [OptionsSoundBackground]
-Tex = OptionsBG
+Tex = OptionsSoundBG
 
 [OptionsSoundStatic1]
 Inheritance = OptionsMenuBG
@@ -9262,7 +9262,7 @@ Inheritance = OptionsButtonExit2
 Texts = 1
 
 [OptionsLyricsBackground]
-Tex = OptionsBG
+Tex = OptionsLyricsBG
 
 [OptionsLyricsStatic1]
 Inheritance = OptionsMenuBG
@@ -9426,7 +9426,7 @@ Inheritance = OptionsButtonExit2
 Texts = 5
 
 [OptionsThemesBackground]
-Tex = OptionsBG
+Tex = OptionsThemesBG
 
 [OptionsThemesStatic1]
 Inheritance = OptionsMenuBG
@@ -9471,7 +9471,7 @@ Inheritance = OptionsButtonExit2
 Texts = 5
 
 [OptionsMicrophonesBackground]
-Tex = OptionsBG
+Tex = OptionsMicrophonesBG
 
 [OptionsMicrophonesStatic1]
 Inheritance = OptionsMenuBG
@@ -9536,7 +9536,7 @@ Inheritance = OptionsButtonExit2
 Texts = 5
 
 [OptionsAdvancedBackground]
-Tex = OptionsBG
+Tex = OptionsAdvancedBG
 
 [OptionsAdvancedStatic1]
 Inheritance = OptionsMenuBG
@@ -9611,7 +9611,7 @@ Inheritance = OptionsButtonExit2
 Texts = 5
 
 [OptionsNetworkBackground]
-Tex = OptionsBG
+Tex = OptionsInternetBG
 
 [OptionsNetworkStatic1]
 Inheritance = OptionsMenuBG
@@ -9743,7 +9743,7 @@ Inheritance = OptionsButtonExit2
 Texts = 5
 
 [OptionsWebcamBackground]
-Tex = OptionsBG
+Tex = OptionsWebcamBG
 
 [OptionsWebcamStatic1]
 Inheritance = OptionsMenuBG
@@ -9866,7 +9866,7 @@ Inheritance = OptionsButtonExit2
 Texts = 2
 
 [OptionsProfilesBackground]
-Tex = OptionsBG
+Tex = OptionsProfilesBG
 
 [OptionsProfilesStatic1]
 X = 30
