--- a/game/themes/common/Basic Violet.ini
+++ b/game/themes/common/Basic Violet.ini
@@ -57,13 +57,24 @@ Select_ArrowRight = [interface]select_arrow_right.svg
 
 #Backgrounds
 LoadingBG      = [bg-load]basic.jpg
-TitleBG	       = [bg-main]violet.jpg
+TitleBG	   = [bg-main]violet.jpg
 MainBG         = [bg-main]violet.jpg
 SongBG         = [bg-main]violet.jpg
 ScoreScreenBG  = [bg-main]violet.jpg
 Top5BG         = [bg-main]violet.jpg
 OptionsBG      = [bg-main]violet.jpg
 PartyBG        = [bg-main]violet.jpg
+
+OptionsGameBG          = [bg-options]game.jpg
+OptionsGraphicsBG      = [bg-options]graphics.jpg
+OptionsSoundBG         = [bg-options]sound.jpg
+OptionsLyricsBG        = [bg-options]lyrics.jpg
+OptionsThemesBG        = [bg-options]themes.jpg
+OptionsMicrophonesBG   = [bg-options]microphones.jpg
+OptionsAdvancedBG      = [bg-options]advanced.jpg
+OptionsInternetBG      = [bg-options]internet.jpg
+OptionsWebcamBG        = [bg-options]webcam.jpg
+OptionsProfilesBG      = [bg-options]profiles.jpg
 
 # # # S O N G S E L E C E T # # #
 SongSelection1up = [main]songSelection1up.png
