Renamed game options

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -6213,7 +6213,7 @@ Color = White
 Font = 0
 Size = 30
 Align = 0
-Text = SING_OPTIONS_GAME_DIFFICULTY
+Text = SING_OPTIONS_DIFFICULTY
 
 [Top5TextLevel]
 X = 270
@@ -8781,23 +8781,23 @@ SelectH = 70
 FadeTex = ButtonFade
 FadeTexPos = 0
 
-[OptionsButtonGameText]
+[OptionsButtonGeneralText]
 Font = 0
 Size = 26
 Align = 1
 Color = White
 
-[OptionsButtonGame]
+[OptionsButtonGeneral]
 Inheritance = OptionsButton
 X = 100
 Y = 120
-Tex = Optionsbuttongame
+Tex = Optionsbuttongeneral
 
-[OptionsButtonGameText1]
-Inheritance = OptionsButtonGameText
+[OptionsButtonGeneralText1]
+Inheritance = OptionsButtonGeneralText
 X = 35
 Y = 80
-Text = C_GAME
+Text = C_GENERAL
 
 [OptionsButtonGraphics]
 Inheritance = OptionsButton
@@ -8806,7 +8806,7 @@ Y = 120
 Tex = Optionsbuttongraphics
 
 [OptionsButtonGraphicsText1]
-Inheritance = OptionsButtonGameText
+Inheritance = OptionsButtonGeneralText
 X = 40
 Y = 80
 Text = C_GRAPHICS
@@ -8821,7 +8821,7 @@ Tex = Optionsbuttonsound
 SelectH = 60
 
 [OptionsButtonSoundText1]
-Inheritance = OptionsButtonGameText
+Inheritance = OptionsButtonGeneralText
 X = 30
 Y = 80
 Text = C_SOUND
@@ -8836,7 +8836,7 @@ Tex = Optionsbuttonlyrics
 SelectH = 65
 
 [OptionsButtonLyricsText1]
-Inheritance = OptionsButtonGameText
+Inheritance = OptionsButtonGeneralText
 X = 35
 Y = 80
 Text = C_LYRICS
@@ -8851,7 +8851,7 @@ Tex = Optionsbuttondesign
 SelectH = 75
 
 [OptionsButtonThemesText1]
-Inheritance = OptionsButtonGameText
+Inheritance = OptionsButtonGeneralText
 X = 35
 Y = 80
 Text = C_THEMES
@@ -8866,7 +8866,7 @@ Tex = Optionsbuttonmicrophones
 SelectH = 65
 
 [OptionsButtonMicrophonesText1]
-Inheritance = OptionsButtonGameText
+Inheritance = OptionsButtonGeneralText
 X = 40
 Y = 80
 Text = C_MICROPHONES
@@ -8881,7 +8881,7 @@ Tex = Optionsbuttonadvanced
 SelectH = 67
 
 [OptionsButtonAdvancedText1]
-Inheritance = OptionsButtonGameText
+Inheritance = OptionsButtonGeneralText
 X = 32
 Y = 80
 Text = C_ADVANCED
@@ -8896,7 +8896,7 @@ Tex = Optionsbuttonnetwork
 SelectH = 67
 
 [OptionsButtonNetworkText1]
-Inheritance = OptionsButtonGameText
+Inheritance = OptionsButtonGeneralText
 X = 31
 Y = 80
 Text = C_INTERNET
@@ -8908,7 +8908,7 @@ Y = 425
 Tex = Optionsbuttonwebcam
 
 [OptionsButtonWebcamText1]
-Inheritance = OptionsButtonGameText
+Inheritance = OptionsButtonGeneralText
 X = 35
 Y = 80
 Text = C_WEBCAM
@@ -8922,7 +8922,7 @@ H = 75
 Tex = Optionsbuttonprofiles
 
 [OptionsButtonProfilesText1]
-Inheritance = OptionsButtonGameText
+Inheritance = OptionsButtonGeneralText
 X = 30
 Y = 80
 Text = C_PROFILES
@@ -8936,7 +8936,7 @@ H = 80
 Tex = Optionsbuttonback
 
 [OptionsButtonExitText1]
-Inheritance = OptionsButtonGameText
+Inheritance = OptionsButtonGeneralText
 X = 40
 Y = 80
 Text = C_BACK
@@ -8999,100 +8999,100 @@ DColor = White
 Tex = OptMenuBG
 Type = Transparent
 
-[OptionsGame]
+[OptionsGeneral]
 Texts = 5
 
-[OptionsGameBackground]
-Tex = OptionsGameBG
+[OptionsGeneralBackground]
+Tex = OptionsGeneralBG
 
-[OptionsGameStatic1]
+[OptionsGeneralStatic1]
 Inheritance = OptionsMenuBG
 
-[OptionsGameText1]
+[OptionsGeneralText1]
 Inheritance = OptionsTitleText
-Text = C_GAME
+Text = C_GENERAL
 
-[OptionsGameSelectSlideLanguage]
+[OptionsGeneralSelectSlideLanguage]
 Inheritance = OptionsSelectSlide
-Text = SING_OPTIONS_GAME_LANGUAGE
+Text = SING_OPTIONS_GENERAL_LANGUAGE
 Y = 130
 
-[OptionsGameLanguageDesc]
+[OptionsGeneralLanguageDesc]
 Inheritance = OptionsDescText
-Text = SING_OPTIONS_GAME_LANGUAGE_DESC
+Text = SING_OPTIONS_GENERAL_LANGUAGE_DESC
 Y = 137
 
-[OptionsGameSelectSongMenu]
+[OptionsGeneralSelectSongMenu]
 Inheritance = OptionsSelectSlide
-Text = SING_OPTIONS_GAME_SONGMENU
+Text = SING_OPTIONS_GENERAL_SONGMENU
 Y = 170
 
-[OptionsGameSongMenuDesc]
+[OptionsGeneralSongMenuDesc]
 Inheritance = OptionsDescText
-Text = SING_OPTIONS_GAME_SONGMENU_DESC
+Text = SING_OPTIONS_GENERAL_SONGMENU_DESC
 Y = 177
 
-[OptionsGameSelectDuets]
+[OptionsGeneralSelectDuets]
 Inheritance = OptionsSelectSlide
-Text = SING_OPTIONS_GAME_DUETS
+Text = SING_OPTIONS_GENERAL_DUETS
 Y = 210
 
-[OptionsGameDuetsDesc]
+[OptionsGeneralDuetsDesc]
 Inheritance = OptionsDescText
-Text = SING_OPTIONS_GAME_DUETS_DESC
+Text = SING_OPTIONS_GENERAL_DUETS_DESC
 Y = 217
 
-[OptionsGameSelectTabs]
+[OptionsGeneralSelectTabs]
 Inheritance = OptionsSelectSlide
-Text = SING_OPTIONS_GAME_TABS
+Text = SING_OPTIONS_GENERAL_TABS
 Y = 250
 
-[OptionsGameTabsDesc]
+[OptionsGeneralTabsDesc]
 Inheritance = OptionsDescText
-Text = SING_OPTIONS_GAME_TABS_DESC
+Text = SING_OPTIONS_GENERAL_TABS_DESC
 Y = 257
 
-[OptionsGameSelectSlideSorting]
+[OptionsGeneralSelectSlideSorting]
 Inheritance = OptionsSelectSlide
-Text = SING_OPTIONS_GAME_SORTING
+Text = SING_OPTIONS_GENERAL_SORTING
 Y = 290
 
-[OptionsGameSortingDesc]
+[OptionsGeneralSortingDesc]
 Inheritance = OptionsDescText
-Text = SING_OPTIONS_GAME_SORTING_DESC
+Text = SING_OPTIONS_GENERAL_SORTING_DESC
 Y = 297
 
-[OptionsGameSelectShowScores]
+[OptionsGeneralSelectShowScores]
 Inheritance = OptionsSelectSlide
-Text = SING_OPTIONS_GAME_SHOWSCORES
+Text = SING_OPTIONS_GENERAL_SHOWSCORES
 Y = 330
 
-[OptionsGameShowScoresDesc]
+[OptionsGeneralShowScoresDesc]
 Inheritance = OptionsDescText
-Text = SING_OPTIONS_GAME_SHOWSCORES_DESC
+Text = SING_OPTIONS_GENERAL_SHOWSCORES_DESC
 Y = 337
 
-[OptionsGameSelectSingScores]
+[OptionsGeneralSelectSingScores]
 Inheritance = OptionsSelectSlide
-Text = SING_OPTIONS_GAME_SINGSCORES
+Text = SING_OPTIONS_GENERAL_SINGSCORES
 Y = 370
 
-[OptionsGameSingScoresDesc]
+[OptionsGeneralSingScoresDesc]
 Inheritance = OptionsDescText
-Text = SING_OPTIONS_GAME_SINGSCORES_DESC
+Text = SING_OPTIONS_GENERAL_SINGSCORES_DESC
 Y = 377
 
-[OptionsGameSelectFindUnsetMedley]
+[OptionsGeneralSelectFindUnsetMedley]
 Inheritance = OptionsSelectSlide
 Text = C_MEDLEYC
 Y = 410
 
-[OptionsGameMedleyCDesc]
+[OptionsGeneralMedleyCDesc]
 Inheritance = OptionsDescText
-Text = SING_OPTIONS_GAME_MEDLEYC_DESC
+Text = SING_OPTIONS_GENERAL_MEDLEYC_DESC
 Y = 417
 
-[OptionsGameButtonExit]
+[OptionsGeneralButtonExit]
 Inheritance = OptionsButtonExit2
 
 
