--- a/game/themes/common/Basic Violet.ini
+++ b/game/themes/common/Basic Violet.ini
@@ -65,7 +65,7 @@ Top5BG         = [bg-main]violet.jpg
 OptionsBG      = [bg-main]violet.jpg
 PartyBG        = [bg-main]violet.jpg
 
-OptionsGameBG          = [bg-options]game.jpg
+OptionsGeneralBG          = [bg-options]general.jpg
 OptionsGraphicsBG      = [bg-options]graphics.jpg
 OptionsSoundBG         = [bg-options]sound.jpg
 OptionsLyricsBG        = [bg-options]lyrics.jpg
@@ -162,7 +162,7 @@ Rating_6 = [score]rating_6.png
 Rating_7 = [score]rating_7.png
 
 # # # O P T I O N S # # #
-Optionsbuttongame        = [Options]buttongame.png
+Optionsbuttongeneral     = [Options]buttongeneral.png
 Optionsbuttongraphics    = [Options]buttongraphics.png
 Optionsbuttonsound       = [Options]buttonsound.png
 Optionsbuttonlyrics      = [Options]buttonlyrics.png
