improved legibility of lyrics

--- a/game/themes/common/Basic Violet.ini
+++ b/game/themes/common/Basic Violet.ini
@@ -93,16 +93,16 @@ Menubg = [menu]bg.png
 
 # # # S I N G # # #
 #the bar where the lyrics reside
-LyricBar       = [sing]textBar.png
+LyricBar       = [sing]textBar.svg
 LyricBarDuet   = [sing]textBar.png
 
 #this one slides in, to tell you that singing starts immediately
 LyricHelpBar   = [sing]lyricsHelpBar.png
 
 #the bar behind the timestuff
-TimeBar1      = [sing]timeBarBG.png
+TimeBar1      = [sing]timeBarBG.svg
 
-#the time progress bar  (not skinned in this theme :P )
+#the time progress bar
 TimeBar      = [sing]timeBar.jpg
 
 #linebonus, the thing that pop ups at the score
