fixed broken jukebox translations

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -66,7 +66,7 @@ Color = White
 Font = 0
 Size = 15
 Align = 0
-Text = UltraStar WorldParty 22.5
+Text = UltraStar WorldParty 22.6
 
 [MainText2]
 X = 5
@@ -8330,22 +8330,22 @@ Y = 190
 
 [JukeboxSongOptionsLyricAlphaSlide]
 Inheritance = JukeboxSongOptionsLyricPositionSlide
-Text = JUKEBOX_SONGOPTIONS_LYRIC_ALPHA
+Text = SING_OPTIONS_LYRICS_ALPHA
 Y = 225
 
 [JukeboxSongOptionsLyricLineSlide]
 Inheritance = JukeboxSongOptionsLyricPositionSlide
-Text = JUKEBOX_SONGOPTIONS_LYRIC_LINE
+Text = SING_OPTIONS_LYRICS_LINE
 Y = 260
 
 [JukeboxSongOptionsLyricPropertySlide]
 Inheritance = JukeboxSongOptionsLyricPositionSlide
-Text = JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY
+Text = SING_OPTIONS_LYRICS_PROPERTY
 Y = 295
 
 [JukeboxSongOptionsLyricColorSlide]
 Inheritance = JukeboxSongOptionsLyricPositionSlide
-Text = JUKEBOX_SONGOPTIONS_LYRIC_COLOR
+Text = C_COLOR
 Y = 330
 
 [JukeboxSongOptionsLyricSelectR]
@@ -8353,7 +8353,7 @@ Inheritance = JukeboxSongOptionsLyricPositionSlide
 Type = Colorized
 TexSBG = Picker
 TypeSBG = Transparent
-Text = JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED
+Text = C_COLOR_RED
 Y = 365
 H = 9
 TextSize = 14
@@ -8367,14 +8367,14 @@ ShowArrows = 0
 
 [JukeboxSongOptionsLyricSelectG]
 Inheritance = JukeboxSongOptionsLyricSelectR
-Text = JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN
+Text = C_COLOR_GREEN
 Y = 380
 SBGColor = LightGreen
 SBGDColor = DarkGreen
 
 [JukeboxSongOptionsLyricSelectB]
 Inheritance = JukeboxSongOptionsLyricSelectR
-Text = JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE
+Text = C_COLOR_BLUE
 Y = 395
 SBGColor = LightBlue
 SBGDColor = DarkBlue
