dropped dead textures

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -8034,7 +8034,7 @@ X = 310
 Y = 385
 W = 300
 H = 25
-Tex = JukeboxField
+Tex = TimeBar1
 Color = ColorDark
 DColor = White
 Type = Colorized
@@ -8066,7 +8066,7 @@ X = 310
 Y = 423
 W = 108
 H = 25
-Tex = JukeboxField
+Tex = mainbar
 Color = ColorDark
 DColor = White
 Type = Colorized
@@ -8305,9 +8305,6 @@ Text=C_LYRICS
 
 [JukeboxSongOptionsLyricPositionSlide]
 Inheritance = OptionsSelectSlide
-Tex = Transparent
-TexSBG = JukeboxSelect
-TypeSBG = Colorized
 Text = SING_OPTIONS_LYRIC_POSITION
 X = 180
 Y = 120
