redesigned pop-ups

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -10118,8 +10118,8 @@ W = 400
 H = 200
 Z = 1
 Alpha=0.95
-Color = ColorDark
-Type = Colorized
+Color = White
+Type = Transparent
 Reflection = 0
 
 [CheckPopupText1]
@@ -10128,7 +10128,7 @@ Y = 160
 W = 400
 Color = White
 Font = 0
-Size = 30
+Size = 28
 Text =
 #MSG_QUESTION_TITLE
 Align = 1
@@ -10140,28 +10140,27 @@ Y = 210
 W = 280
 Color = White
 Font = 0
-Size = 24
+Size = 20
 Align = 1
 Z = 1
 
 [CheckPopupButton1]
 X = 285
 Y = 310
-W = 100
-H = 25
-Tex = Button2
+W = 90
+H = 20
+Tex = Button
 Color = ColorDark
-DColor = ColorLight
 Type = Colorized
 Texts = 1
 Z = 1
 
 [CheckPopupButton1Text1]
-X = 50
-Y = 0
+X = 45
+Y = 2
 Color = White
 Font = 0
-Size = 24
+Size = 18
 Text = YES
 Align = 1
 Z = 1
@@ -10170,19 +10169,19 @@ Z = 1
 X = 415
 Y = 310
 W = 100
-H = 25
-Tex = Button2
+H = 20
+Tex = Button
 Color = ColorDark
 Type = Colorized
 Texts = 1
 Z = 1
 
 [CheckPopupButton2Text1]
-X = 50
-Y = 0
+X = 48
+Y = 2
 Color = White
 Font = 0
-Size = 24
+Size = 18
 Text = NO
 Align = 1
 Z = 1
@@ -10210,7 +10209,7 @@ W = 380
 
 [ErrorPopupButton1]
 Inheritance = CheckPopupButton1
-X = 350
+X = 360
 Tex = Button
 
 [ErrorPopupButton1Text1]
