--- a/game/themes/common/Basic Violet.ini
+++ b/game/themes/common/Basic Violet.ini
@@ -19,7 +19,7 @@ Color=Violet
 /**
  * Interface
  */
-interface_dialog_background = [interface]dialog_background.png
+interface_dialog_background = [interface]dialog_background.svg
 
 Cursor = cursor.svg
 Cursor_Pressed = cursor2.svg
@@ -46,7 +46,7 @@ ButtonJukebox  = [main]buttonjukebox.png
 ButtonOption   = [main]buttonoption.png
 ButtonExit     = [main]buttonexit.png
 Button2        = [main]button2.png
-Button         = [main]button.png
+Button         = button.svg
 ButtonF        = [main]buttonf.jpg
 MainBar        = [main]mainBar.png
 
@@ -95,7 +95,7 @@ LyricBar       = [sing]textBar.svg
 LyricBarDuet   = [sing]textBar.png
 
 #this one slides in, to tell you that singing starts immediately
-LyricHelpBar   = [sing]lyricsHelpBar.png
+LyricHelpBar   = [sing]lyricsHelpBar.svg
 
 #the bar behind the timestuff
 TimeBar1      = [sing]timeBarBG.svg
