--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -66,7 +66,7 @@ Color = White
 Font = 0
 Size = 15
 Align = 0
-Text = UltraStar WorldParty 22.6
+Text = UltraStar WorldParty 22.7
 
 [MainText2]
 X = 5
@@ -85,121 +85,164 @@ X = 385
 Y = 550
 Color = White
 Font = 0
-Size = 30
+Size = 0
 Align = 1
 Text =
 
 [MainButton]
 W = 85
 H = 115
-Color = White
+Color = ColorDark
 DColor = White
-Type = Transparent
+Type = Colorized
 Texts = 1
-Reflection = 1
+Reflection = 0
 ReflectionSpacing = 0
 Fade = 1
-FadeText = 1
-SelectH = 98
-FadeTex = ButtonFade
+FadeText = 0
 FadeTexPos = 0
+SelectW = 234
+SelectH = 258
 
 [MainButtonText]
 Font = 0
-Size = 0
+Size = 16
 Align = 1
 Color = White
 
+[MainIconButton]
+W = 30
+H = 40
+Y = 515
+Color = ColorDark
+DColor = White
+Type = Transparent
+Texts = 1
+Reflection = 0
+ReflectionSpacing = 0
+Fade = 1
+FadeText = 0
+FadeTexPos = 50
+FadeTex = 
+Reflection = 0
+SelectH = 40
+
+[MainStatic1]
+X = 30
+Y = 130
+W = 225
+H = 245
+Color = White
+Type = Transparent
+Tex = ButtonSoloBG
+
 [MainButtonSolo]
 Inheritance = MainButton
-X = 140
+X = 26
 Y = 125
-W = 90
-Tex = ButtonSolo
+W = 232
+H = 255
+Tex = ButtonFrameBG
+Type = Transparent
 
 [MainButtonSoloText1]
 Inheritance = MainButtonText
-X = 75
-Y = 10
-Text = SING_SING
+X = 110
+Y = 222
+Text = SING_SING_DESC
+
+[MainStatic2]
+X = 285
+Y = 130
+W = 225
+H = 245
+Color = White
+Type = Transparent
+Tex = ButtonPartyBG
 
 [MainButtonMulti]
 Inheritance = MainButton
-X = 340
+X = 281
 Y = 125
-W = 95
-Tex = ButtonParty
+W = 232
+H = 255
+Tex = ButtonFrameBG
+Type = Transparent
 
 [MainButtonMultiText1]
 Inheritance = MainButtonText
-X = 75
-Y = 10
-Text = SING_MULTI
+X = 110
+Y = 222
+Text = SING_MULTI_DESC
+
+[MainStatic3]
+X = 544
+Y = 130
+W = 225
+H = 245
+Color = White
+Type = Transparent
+Tex = ButtonJukeboxBG
 
 [MainButtonJukebox]
 Inheritance = MainButton
-X = 525
-Y = 135
-Tex = ButtonJukebox
+X = 540
+Y = 125
+W = 232
+H = 255
+Tex = ButtonFrameBG
+Type = Transparent
 
 [MainButtonJukeboxText1]
 Inheritance = MainButtonText
-X = 45
-Y = 575
-Text = SING_JUKEBOX
+X = 110
+Y = 222
+Text = SING_JUKEBOX_DESC
+
+[MainButtonAbout]
+Inheritance = MainIconButton
+X = 235
+Tex = ButtonAbout
+
+
+[MainButtonAboutText1]
+Inheritance = MainButtonText
+X = 15
+Y = 50
+Text = SING_ABOUT
 
 [MainButtonStats]
-Inheritance = MainButton
-X = 150
-Y = 345
+Inheritance = MainIconButton
+X = 335
 Tex = ButtonStats
 
 [MainButtonStatsText1]
 Inheritance = MainButtonText
-X = 70
-Y = 3
+X = 15
+Y = 50
 Text = SING_STATS
 
 [MainButtonOptions]
-Inheritance = MainButton
-X = 340
-Y = 345
+Inheritance = MainIconButton
+X = 435
 Tex = ButtonOption
-ReflectionSpacing = 10
 
 [MainButtonOptionsText1]
 Inheritance = MainButtonText
-X = 70
-Y = 3
+X = 15
+Y = 50
 Text = SING_OPTIONS
 
 [MainButtonExit]
-Inheritance = MainButton
-X = 525
-Y = 350
+Inheritance = MainIconButton
+X = 535
 Tex = ButtonExit
 
 [MainButtonExitText1]
 Inheritance = MainButtonText
-X = 75
-Y = 10
-Text = SING_EXIT
-
-[MainButtonAbout]
-Inheritance = MainButton
-X = 12
-Y = 535
-W = 40
-H = 50
-Tex = ButtonAbout
-Reflection = 0
-SelectH = 40
-
-[MainButtonAboutText1]
-Inheritance = MainButtonText
-X = 30
+X = 15
 Y = 50
-Text = SING_ABOUT
+Text = SING_EXIT
 
 [MainProgressSongsText]
 X = 400
