--- a/game/themes/common/Basic Violet.ini
+++ b/game/themes/common/Basic Violet.ini
@@ -38,17 +38,18 @@ icon_song_fixedby     = [icon]song_fixedby.png
 icon_song_unvalidated = [icon]song_unvalidated.png
 
 # # # M A I N # # #
-ButtonSolo     = [main]buttonsolo.png
-ButtonAbout    = [main]buttonabout.png
-ButtonParty    = [main]buttonparty.png
-ButtonStats    = [main]buttonstats.png
-ButtonJukebox  = [main]buttonjukebox.png
-ButtonOption   = [main]buttonoption.png
-ButtonExit     = [main]buttonexit.png
-Button2        = [main]button2.png
-Button         = button.svg
-ButtonF        = [main]buttonf.jpg
-MainBar        = [main]mainBar.png
+ButtonFrameBG    = [main]buttonframeBG.png
+ButtonSoloBG     = [main]buttonsoloBG.png
+ButtonPartyBG    = [main]buttonpartyBG.png
+ButtonJukeboxBG  = [main]buttonjukeboxBG.png
+ButtonAbout      = [main]buttonabout.svg
+ButtonStats      = [main]buttonstats.svg
+ButtonOption     = [main]buttonoption.svg
+ButtonExit       = [main]buttonexit.svg
+Button2          = [main]button2.png
+Button           = button.svg
+ButtonF          = [main]buttonf.jpg
+MainBar          = [main]mainBar.png
 
 Select_ArrowLeft = [interface]select_arrow_left.svg
 Select_ArrowRight = [interface]select_arrow_right.svg
@@ -295,7 +296,6 @@ NoAvatar_P6  = [profiles]noavatar.svg
 
 # # # A B O U T # # #
 LogoWeb = [About]logo_web.png
-LogoDeluxe = [About]logo_deluxe.png
 AboutBG = [About]helperbg2.png
 
 # # # D E V E L O P E R S # # #
