updated old buttons

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -1337,7 +1337,7 @@ Size = 70
 Align = 2
 
 [SongRouletteInfoMessageBG]
-Tex = SongMessage
+Tex = ButtonF
 X = 250
 Y = 90
 W = 300
@@ -1684,7 +1684,7 @@ Size = 70
 Align = 2
 
 [SongChessboardInfoMessageBG]
-Tex = SongMessage
+Tex = ButtonF
 X = 250
 Y = 90
 W = 300
@@ -1894,7 +1894,7 @@ Size = 70
 Align = 2
 
 [SongCarouselInfoMessageBG]
-Tex = SongMessage
+Tex = ButtonF
 X = 250
 Y = 90
 W = 300
@@ -2179,7 +2179,7 @@ Size = 70
 Align = 2
 
 [SongSlotMachineInfoMessageBG]
-Tex = SongMessage
+Tex = ButtonF
 X = 250
 Y = 90
 W = 300
@@ -2404,7 +2404,7 @@ Size = 70
 Align = 2
 
 [SongSlideInfoMessageBG]
-Tex = SongMessage
+Tex = ButtonF
 X = 250
 Y = 90
 W = 300
@@ -2747,7 +2747,7 @@ Size = 70
 Align = 2
 
 [SongListInfoMessageBG]
-Tex = SongMessage
+Tex = ButtonF
 X = 250
 Y = 90
 W = 300
@@ -3058,7 +3058,7 @@ Size = 70
 Align = 2
 
 [SongMosaicInfoMessageBG]
-Tex = SongMessage
+Tex = ButtonF
 X = 250
 Y = 90
 W = 300
@@ -3126,7 +3126,7 @@ Color = White
 Align = 1
 
 [SingInfoMessageBG]
-Tex = SongMessage
+Tex = ButtonF
 X = 250
 Y = 40
 W = 300
@@ -5989,20 +5989,20 @@ Color = P6Dark
 
 [ScoreButtonSend1]
 X = 200
-Y = 505
-W = 180
+Y = 540
+W = 160
 H = 30
-Tex = ButtonSendScore
-DColor = ColorLight
-Color = ColorDark
+Tex = ButtonF
+DColor = White
+Color = ColorLight
 Type = Transparent
 Texts = 1
 
 [ScoreButtonSend1Text1]
-X = 90
-Y = 4
+X = 80
+Y = 6
 Font = 0
-Size = 24
+Size = 18
 Align = 1
 Color = White
 Text = SCORE_SEND_DESC
@@ -6012,50 +6012,29 @@ Text = SCORE_SEND_DESC
 ############################
 
 [ScoreButtonSend2]
-X = 310
+Inheritance = ScoreButtonSend1
+X = 325
 Y = 100
-W = 180
-H = 30
 Z = 1
-Tex = ButtonSendScore
-DColor = ColorLight
-Color = ColorDark
-Type = Transparent
 Texts = 1
 
 [ScoreButtonSend2Text1]
-X = 90
-Y = 4
-Font = 0
-Size = 24
-Align = 1
-Color = White
-Text = SCORE_SEND_DESC
+Inheritance = ScoreButtonSend1Text1
 
 ############################
 #  Send Score 3/6 Players  #
 ############################
 
 [ScoreButtonSend3]
+Inheritance = ScoreButtonSend1
 X = 310
 Y = 100
-W = 180
-H = 30
 Z = 1
-Tex = ButtonSendScore
-DColor = ColorLight
-Color = ColorDark
-Type = Transparent
 Texts = 1
 
 [ScoreButtonSend3Text1]
-X = 90
-Y = 4
-Font = 0
-Size = 24
-Align = 1
-Color = White
-Text = SCORE_SEND_DESC
+Inheritance = ScoreButtonSend1Text1
+
 
 ################################
 ##      Send Score PopUp      ##
