--- a/game/themes/common/Basic Violet.ini
+++ b/game/themes/common/Basic Violet.ini
@@ -46,9 +46,8 @@ ButtonAbout      = [main]buttonabout.svg
 ButtonStats      = [main]buttonstats.svg
 ButtonOption     = [main]buttonoption.svg
 ButtonExit       = [main]buttonexit.svg
-Button2          = [main]button2.png
+ButtonF          = buttonF.svg
 Button           = button.svg
-ButtonF          = [main]buttonf.jpg
 MainBar          = [main]mainBar.png
 
 Select_ArrowLeft = [interface]select_arrow_left.svg
@@ -83,7 +82,6 @@ SongSelection3 = [main]songSelection3.png
 SongSelection4 = [main]songSelection4.png
 SongSelection5 = [main]songSelection5.png
 SongCover      = ../../covers/Common/NoCover.jpg
-SongMessage    = [song]message.png
 SongDuetSinger = [song]duetsinger.png
 SongDuetSinger2 = [song]duetsinger2.png
 SongDuetSinger3 = [song]duetsinger3.png
@@ -139,8 +137,6 @@ ScoreLevel_Light_Round    = [score]level_light_round.png
 
 ScoreLevel_Lightest       = [score]level_lightest.png
 ScoreLevel_Lightest_Round = [score]level_lightest_round.png
-
-ButtonSendScore = [score]buttonsendscore.png
 
 # Boxes near the text, that show what color is for which bar
 ScoreBar_box_lightest = [score]bar_box_lightest.png
